--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./index.css">
-    <title>TapnBite</title>
+    <title>TapNBite</title>
 </head>
 <body>
+    <div id="root"></div>
     <script type="module" src="./App.js"></script>
 </body>
 </html>
